# opencl-raytracer-oneweekend

./: .gitignore  CMakeLists.txt  README.md
.clangd/index/: _fixes.hpp.0030035F79BC684A.idx  _vectorize.hpp.16375A72D8AF732A.idx  common.hpp.776177FC1C8D2B77.idx  compute_common.hpp.291968145E636087.idx  compute_vector_relational.hpp.04DB6A9E0C98D657.idx  exponential.hpp.BBD595D1D76ECAF9.idx  external.hpp.2C77953201EBD4B9.idx  func_common.inl.0579D109A5FC26C0.idx  func_exponential.inl.21E31BBFE459576E.idx  func_geometric.inl.0D65C708E24EDDBE.idx  func_integer.inl.BC26D75BB3E33466.idx  func_matrix.inl.3981093BE56CCE77.idx  func_packing.inl.A71D7C8E3F0F3859.idx  func_trigonometric.inl.0B7C8E918DA2864D.idx  func_vector_relational.inl.97C0A48476FC7089.idx  fwd.hpp.45E3DEF603BA8EB5.idx  geometric.hpp.6CBBD50501FA4A9D.idx  glm.hpp.A18383C2AF2D71E1.idx  gradient.cpp.2C063E810D3D9499.idx  hello.cpp.CD59E5A5168DA9F6.idx  integer.hpp.40084CB6629A8DD5.idx  mat2x2.hpp.A35A1626209E9371.idx  mat2x3.hpp.34B640D53EBCFDCE.idx  mat2x4.hpp.281840F367626EB7.idx  mat3x2.hpp.C0A27D9C21AB5333.idx  mat3x3.hpp.7DBFEFF2FAEE4341.idx  mat3x4.hpp.C5123F170399368D.idx  mat4x2.hpp.9BD860823C696756.idx  mat4x3.hpp.01C11E4820AB196E.idx  mat4x4.hpp.85CD2D78D2BBE272.idx  matrix.hpp.9C450EB34372448C.idx  matrix_double2x2.hpp.805C87ECF4541518.idx  matrix_double2x2_precision.hpp.FB94B58821420745.idx  matrix_double2x3.hpp.FFE9DC338AACE511.idx  matrix_double2x3_precision.hpp.D52D71F2B950581F.idx  matrix_double2x4.hpp.DF3B0CAB86BED47F.idx  matrix_double2x4_precision.hpp.767F352780996DEB.idx  matrix_double3x2.hpp.36478A49347503AE.idx  matrix_double3x2_precision.hpp.2B36F8A105BB9516.idx  matrix_double3x3.hpp.59B0C9EA13A34317.idx  (+97 more)
include/custom/: camera.hpp  debug.hpp  external.hpp  image.hpp  light.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  singulars.hpp  utils.hpp
include/nextweek/: aabb.hpp  camera.hpp  clobj.hpp  color.hpp  external.hpp  hittable.hpp  image.hpp  material.hpp  random.hpp  ray.hpp  sphere.hpp  texture.hpp  utils.hpp  vec3.hpp
include/nextweek/kernels/: aabb.h  camera.h  constants.h  hitrecord.h  hittable.h  image.h  kutils.h  macros.h  material.h  ray.h  scattering.h  sphere.h  texture.h
include/oneweekend/: camera.hpp  color.hpp  external.hpp  hittable.hpp  material.hpp  random.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
src/gradient/: gradient.cpp
src/hello/: hello.cpp
src/nextweek/: nextweek.cpp
src/oneweekend/: main.cpp
src/sphere/: rtsphere.cpp  sphere.cpp  sphere2.cpp  utils.hpp
